HLT-2540: fix icon rendering on IE8

--- a/src/main/webapp/bundles/health_v2/less/benefitsStep.less
+++ b/src/main/webapp/bundles/health_v2/less/benefitsStep.less
@@ -1,6 +1,8 @@
 // Mixins for icon sizes.
 .benefitsIconSize(@icon-font-size, @label-font-size, @margin-offset){
     div.checkbox {
+        float: left;
+
         label{
             width: @icon-font-size * 1.3 + 2; // padding * 2 + font-size + border * 2
             font-size: @label-font-size;
@@ -56,7 +58,8 @@
                 .checkbox {
                     padding:0;
                     input{
-                        &:checked {
+                        &:checked,
+                        &.checked {
                             & + label:before {
                                 background-color: @health-benefits-icon-bg-checked-color;
                                 border-color: @health-benefits-icon-border-checked-color;
@@ -247,6 +250,18 @@
         }
         .CTM-plus label, .benefits-side-bar .CTM-plus{
             &:before { content: "\e929"; }
+        }
+    }
+}
+
+.lt-ie9,
+.lt-ie10 {
+    #benefitsForm .benefits-list {
+        .hasIcons {
+            .categoriesCell {
+                width: auto;
+                .benefitsIconSize(60px, @font-size-base, 0);
+            }
         }
     }
 }
